  * Removed the redundant indication of the role of predicates in the Resource View
  * Added the possibility to specify a template for enriching the output of predefined rendering engines
    (e.g. to include a skos:notation)
  * Fixed exception about missing configuration when exporting the results of a SPARQL graph query after the
    application of some RDFTransformers
  * Fixed some compatibility issues with Java 11
  * Fixed "authorization denied" when replacing an IRI value via Resources.updateTriple()
  * Fixed the possibility to have more prefixed for the same namespace
  * Fixed NullPointerException in the service MAPLE/profileSingleResourceMatchProblem (by updating MAPLE)
  * Fixed inability to disable history (in the ChangeTracker sail)
  * Fixed partial deletion of a commit from the validation graph after its validation
  * Preserved entry order in StringToMapGenericConverter
  * Updated to lime-api 0.3.3
  * Updated to maple 0.0.3

version 5.0
date: 30/01/2019
  * Added extension point for connecting to dataset catalogs, together with implementations targeting
  	Linked Open Vocabularies (https://lov.linkeddata.es/dataset/lov/) and the LOD Cloud (https://lod-cloud.net/)
  * Added the possibility to preload data into a project being created, including data retrieved through the 
    dataset catalog connection
  * Added functionality for owl:importing vocabularies retrieved through the dataset catalog connection
  * Updated e-mail configuration;
  * Added email notification when a user is enabled by the administrator
  * Added user status (online/offline) to the users list 
  * Improved speed of advanced search
  * Allowed CustomForm and FormCollection with custom namespaces
  * Enabled mass assignment of concepts to a scheme
  * Implemented support for Graph visualization
  * Added stackTrace info in error response and changed the serialization to JSON format;